# make-clean.py

./: .travis.yml  CHANGES.txt  LICENSE  MANIFEST.in  README.md  README.rst  SECURITY.md  appveyor.yml  make_clean.py  setup.cfg  setup.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/actions/lint-it/: action.yml
.github/actions/pip-freeze/: action.yml
.github/actions/test-it/: action.yml
.github/actions/test-it-linux/: action.yml
.github/actions/test-it-win/: action.yml
.github/workflows/: codecov.yml  codeql-analysis.yml  license-scanning.yml  linter.yml  super-linter.yml  test.yml  wiki.yml
doc/: Home.md  Release.md  UnitTest.md
test/: conftest.py  test_make_clean.py
test/linter/: test_pylint.py
