[metadata]
description-file = README.md

[bdist_wheel]
universal = 1

[aliases]
setup_test = develop easy_install make-clean[test]
setup_pypi = develop easy_install make-clean[pypi]
release = register clean --all sdist bdist_wheel

[tool:pytest]
norecursedirs =
    venv
addopts =
    -rxEfsw
    --strict
    --ignore=setup.py
    --ignore=make_clean.py
    --ignore=.eggs
    -p pytester
